[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cubiczan-resilience"
version = "0.1.0"
description = "Battle-tested resilience primitives: retry/backoff, circuit breaker, idempotency, atomic writes, and fail-closed FastAPI helpers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "cubiczan" }]
keywords = ["resilience", "retry", "circuit-breaker", "idempotency", "fastapi"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
http = ["httpx>=0.24"]
fastapi = ["fastapi>=0.100", "starlette>=0.27"]
dev = ["pytest>=7", "pytest-asyncio>=0.21", "mypy>=1.0", "httpx>=0.24", "fastapi>=0.100"]

[project.urls]
Homepage = "https://codeberg.org/cubiczan/cubiczan-resilience"

[tool.hatch.build.targets.wheel]
packages = ["src/cubiczan_resilience"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
