[package]
name = "resilient-call"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Resilience primitives: async retry with full-jitter exponential backoff, tokio timeout wrapper, CockroachDB serializable-retry (SQLSTATE 40001), and a file-backed idempotency ledger for guarding money/state operations."
repository = "https://codeberg.org/cubiczan/cubiczan-resilience"
keywords = ["retry", "backoff", "jitter", "idempotency", "cockroachdb"]
categories = ["asynchronous", "database"]

[dependencies]
tokio = { version = "1", features = ["time", "macros", "rt"] }
rand = "0.8"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["time", "macros", "rt", "rt-multi-thread", "test-util"] }
tempfile = "3"
