[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "resilient-onchain"
version = "0.1.0"
description = "Chain-library-agnostic resilient on-chain write helper: bounded retry + fee bump, nonce management, tx-success assertion, circuit breaker, idempotency guard."
readme = "../README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["resilient_onchain*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
